# tdcs-anatomy-montage-optimization

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: dwi_config.sh
config/3-simulation/: sim_settings_publication.json
data/: parcel_stats.fsaverage.fwhm10.Schaefer2018_500Parcels_17Networks_order.age_35-40.gender_M.n_34.csv  parcel_stats.fsaverage.fwhm10.Schaefer2018_500Parcels_17Networks_order.age_50-55.gender_M.n_29.csv  parcel_stats.fsaverage.fwhm10.Schaefer2018_500Parcels_17Networks_order.age_60-65.gender_M.n_25.csv  parcel_stats.fsaverage.fwhm10.Schaefer2018_500Parcels_17Networks_order.age_75-80.gender_M.n_25.csv  parcel_stats.fsaverage.fwhm10.Schaefer2018_500Parcels_17Networks_order.gender_F.n_332.csv  parcel_stats.fsaverage.fwhm10.Schaefer2018_500Parcels_17Networks_order.gender_M.n_258.csv  parcel_stats_total.fsaverage.fwhm10.Schaefer2018_500Parcels_17Networks_order.n_590.csv  pca_results_pc1-3.csv  sample_input.csv  subject_ids.txt
data/parcel_stats/: parcel_stats.fsaverage.fwhm10.Schaefer2018_500Parcels_17Networks_order.age_35-40.gender_F.n_33.csv  parcel_stats.fsaverage.fwhm10.Schaefer2018_500Parcels_17Networks_order.age_40-45.gender_F.n_48.csv  parcel_stats.fsaverage.fwhm10.Schaefer2018_500Parcels_17Networks_order.age_40-45.gender_M.n_27.csv  parcel_stats.fsaverage.fwhm10.Schaefer2018_500Parcels_17Networks_order.age_45-50.gender_F.n_42.csv  parcel_stats.fsaverage.fwhm10.Schaefer2018_500Parcels_17Networks_order.age_45-50.gender_M.n_34.csv  parcel_stats.fsaverage.fwhm10.Schaefer2018_500Parcels_17Networks_order.age_50-55.gender_F.n_43.csv  (+8 more)
(+69 files in other folders)
